# char-rnn-text-generation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  chainer_model.py  environment.yml  keras_model.py  logger.py  mxnet_model.py  pyproject.toml  pytorch_model.py  requirements.txt  scripts.sh  tf_model.py  utils.py  wordnet_lexicon.py
cioran/: Cioran, E. M. - A Short History of Decay (Arcade, 2012).txt  Cioran, E. M. - All Gall is Divided (Arcade, 2012).txt  Cioran, E. M. - Anathemas and Admirations (Arcade, 2012).txt  Cioran, E. M. - Drawn and Quartered (Arcade, 2012).txt  Cioran, E. M. - History and Utopia (Arcade, 2015).txt  Cioran, E. M. - New Gods (Chicago, 2013).txt  Cioran, E. M. - On the Heights of Despair (Chicago, 1992).txt  Cioran, E. M. - Temptation to Exist (Arcade, 2013).txt  Cioran, E. M. - Trouble With Being Born (Seaver, 2011).txt
data/: id2char.tsv
