[project]
name = "char-rnn-text-generation"
version = "0.1.0"
description = "Character-level RNN text generation models implemented in several deep learning frameworks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras~=3.0",
    "loguru~=0.7.3",
    "numpy~=2.0",
    "tensorboard~=2.20",
    "tensorflow~=2.0",
    "torch~=2.0",
    "tqdm~=4.67",
]
